--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,3 @@
-/* Estilos Gerais */
-.container {
-  width: 960px;
-  margin: 0 auto;
-}
-
 /* Header */
 .menu-bg {
   background: #8251ff;
@@ -16,6 +10,8 @@
   justify-content: space-between;
   align-items: center;
   padding: 15px 0;
+  margin: 0 auto;
+  max-width: 960px;
 }
 
 .menu-logo a {
@@ -50,6 +46,8 @@
   font-family: "Atkinson Hyperlegible", sans-serif;
   text-align: center;
   color: #fff;
+  max-width: 960px;
+  margin: 0 auto;
 }
 
 .intro-text h1 {
@@ -76,4 +74,55 @@
 .intro-text cite {
   font-size: 1.3em;
   font-weight: bold;
+}
+
+/* Xadrez */
+
+.xadrez {
+  width: 960px;
+  margin: 0 auto;
+}
+
+.title {
+  font-family: "Nunito", sans-serif;
+  font-size: 2em;
+  font-weight: bold;
+  text-align: center;
+  padding: 40px 0;
+}
+
+.title::after {
+  content: "";
+  height: 4px;
+  width: 120px;
+  display: block;
+  margin: 5px auto;
+  background: #000;
+}
+
+.xadrez-principios {
+  max-width: 960px;
+  /* display: grid;
+  grid-template-columns: 480px 480px; */
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.principios-info {
+  font-family: "Atkinson Hyperlegible", sans-serif;
+  font-size: 1.25em;
+  line-height: 1.4;
+  padding-bottom: 5px;
+  flex: 1 1 480px;
+}
+
+.principios-info p {
+  margin-bottom: 1em;
+}
+
+.principios-img img {
+  width: 400px;
+  height: 400px;
+  flex: 1 1 480px;
+  margin-left: 40px;
 }
