--- a/css/style.css
+++ b/css/style.css
@@ -52,8 +52,10 @@
 
 .intro-text h1 {
   font-weight: bold;
-  font-size: 2em;
+  font-size: 3em;
+  text-transform: uppercase;
   padding: 60px 0;
+  font-family: "Nunito", sans-serif;
 }
 
 .intro-text p {
@@ -78,12 +80,12 @@
 
 /* Xadrez */
 
-.xadrez {
+/* .container {
   width: 960px;
   margin: 0 auto;
-}
+} */
 
-.title {
+.titulo {
   font-family: "Nunito", sans-serif;
   font-size: 2em;
   font-weight: bold;
@@ -91,7 +93,7 @@
   padding: 40px 0;
 }
 
-.title::after {
+.titulo::after {
   content: "";
   height: 4px;
   width: 120px;
@@ -102,8 +104,7 @@
 
 .xadrez-principios {
   max-width: 960px;
-  /* display: grid;
-  grid-template-columns: 480px 480px; */
+  margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
 }
@@ -125,4 +126,102 @@
   height: 400px;
   flex: 1 1 480px;
   margin-left: 40px;
+}
+
+@media (max-width: 720px) {
+  .principios-img img {
+    margin-left: 1.5em;
+  }
+
+  .principios-info p {
+    padding: 0 10px 0 10px;
+  }
+}
+
+/* Peças */
+.pecas {
+  grid-template-columns: 90px 250px 400px 80px;
+  grid-column: 2 / 4;
+  width: 960px;
+  margin: 0 auto;
+  box-sizing: border-box;
+  padding: 10px;
+  display: grid;
+  grid-gap: 20px;
+  margin-bottom: 4rem;
+}
+
+.lista-pecas {
+  cursor: pointer;
+}
+.lista-pecas img {
+  max-width: 300px;
+  max-height: 300px;
+}
+
+.lista-pecas {
+  height: 370px;
+  overflow-y: scroll;
+  grid-column: 2;
+}
+
+.lista-pecas::-webkit-scrollbar {
+  width: 18px;
+}
+
+.lista-pecas::-webkit-scrollbar-thumb {
+  background: #8251ff;
+  border-left: 4px solid #faf6ed;
+  border-right: 4px solid #faf6ed;
+}
+
+.lista-pecas::-webkit-scrollbar-track {
+  background: #faf6ed;
+}
+.xadrez-peca-info {
+  grid-column: 3;
+  margin-left: 20px;
+}
+
+.xadrez-peca-info h3 {
+  font-family: "Nunito", sans-serif;
+  font-weight: bold;
+  font-size: 1.3em;
+}
+
+.xadrez-peca-info h3::before {
+  content: "";
+  height: 16px;
+  width: 5px;
+  background: #8251ff;
+  display: inline-block;
+  margin: 0 auto;
+  margin-right: 7px;
+}
+
+.xadrez-peca-info p {
+  font-family: "Atkinson Hyperlegible", sans-serif;
+  font-size: 1.2em;
+  line-height: 1.2;
+  padding: 10px 0 10px 0;
+}
+
+.xadrez-peca-info section {
+  display: none;
+  animation: show 0.5s forwards;
+}
+
+.xadrez-peca-info section.ativo {
+  display: block;
+}
+
+@keyframes show {
+  from {
+    opacity: 0;
+    transform: translate3d(-30px, 0, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
 }
