--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+p {
+  color: rgba(0, 0, 0, 0.74);
+}
+
 /* Header */
 .menu-bg {
   background: #8251ff;
@@ -65,6 +69,7 @@
 .intro-text p {
   font-size: 1.5em;
   padding-bottom: 20px;
+  color: #fff;
 }
 
 .intro-text p::after,
@@ -302,4 +307,114 @@
   max-width: 300px;
   margin: 0 auto;
   padding-bottom: 20px;
+}
+/* Jogadores */
+.jogadores {
+  width: 960px;
+  margin: 0 auto;
+}
+
+.jogador {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  padding: 20px 0 20px 0;
+}
+
+.jogador:nth-of-type(1) {
+  /* justify-content: center; */
+}
+
+.jogador img {
+  width: 320px;
+}
+
+.jogador h3 {
+  font-family: "Nunito", sans-serif;
+  font-size: 1.5em;
+  font-weight: bold;
+  padding: 0 30px 0 30px;
+  /* text-align: center; */
+}
+
+.jogador h3::before {
+  content: "";
+  width: 8px;
+  height: 18px;
+  display: inline-block;
+  background: #37399d;
+  margin: 0 5px 0 0;
+}
+
+.jogador p::before {
+  content: "";
+  width: 20px;
+  height: 10px;
+  display: inline-block;
+  background: #6a01a3;
+  margin: 0 5px 0 0;
+}
+
+.jogador-info {
+  padding-left: 30px;
+}
+
+.jogador-info dt {
+  font-family: "Nunito", sans-serif;
+  font-size: 1.2em;
+  margin-top: 20px;
+}
+
+.jogador-info dt::before {
+  content: "";
+  width: 20px;
+  height: 10px;
+  display: inline-block;
+  background: #6a01a3;
+  margin: 0 5px 0 0;
+}
+
+.jogador-info dt::after {
+  content: "▼";
+  margin-left: 10px;
+  color: #6a01a3;
+}
+
+.jogador-info dt.ativo::after {
+  content: "▲";
+}
+
+.jogador-info ul {
+  display: none;
+  font-family: "Atkinson Hyperlegible", sans-serif;
+  padding: 10px 0;
+  line-height: 1.4em;
+  max-width: 400px;
+}
+
+.jogador-info li::before {
+  content: "";
+  width: 7px;
+  height: 7px;
+  border-radius: 50%;
+  background: #43f0b1;
+  display: inline-block;
+  margin-right: 10px;
+  /* border: 2px solid #000; */
+}
+
+.jogador-info ul.ativo {
+  display: block;
+}
+
+.jogador-info dd {
+  display: none;
+  font-family: "Atkinson Hyperlegible", sans-serif;
+  font-size: 1.1em;
+  max-width: 400px;
+  padding-top: 10px;
+}
+
+.jogador-info dd.ativo {
+  display: block;
 }
